Bug 699490 - Broken PDF/X-3 generated
Summary: Broken PDF/X-3 generated
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: 9.23
Hardware: PC Windows 10
: P4 normal
Assignee: Ken Sharp
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-06-25 07:54 UTC by francesco.fiorella96
Modified: 2018-06-30 14:00 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
Input PDF file and PS definition file (927.78 KB, application/x-zip-compressed)
2018-06-25 07:54 UTC, francesco.fiorella96
Details

Note You need to log in before you can comment on or make changes to this bug.
Description francesco.fiorella96 2018-06-25 07:54:58 UTC
Created attachment 15287 [details]
Input PDF file and PS definition file

I am trying to generate a PDF/X-3 file from another pdf and converting to another ICC color profile too. I tried this command but it is giving me a completely blank pdf file as output. No errors or warnings at all (even with -dDEBUG enabled).

Here's the command:

.\gswin64c.exe -dPDFX -dNOPAUSE -dBATCH -dDEBUG -sDEVICE=pdfwrite -sColorConversionStrategy=/UseDeviceIndependentColor -sProcessColorModel=DeviceCMYK -dColorAccuracy=2 -dRenderIntent=0 -dAutoFilterColorImages=false -dAutoFilterColorImages=false -dColorImageFilter=/FlateEncode -dGrayImageFilter=/FlateEncode -dDownsampleMonoImages=false -dDownsampleGrayImages=false -dDownsampleColorImages=false -sOutputICCProfile="C:/Program Files/gs/gs9.23/bin/profiles/CMYK/WebCoatedSWOP2006Grade5.icc" -dDeviceGrayToK=true -sOutputFile="final-cmyk0.pdf" final0_PDFX_def.ps test.pdf;
Comment 1 Ken Sharp 2018-06-30 14:00:50 UTC
Commit aba212c73d6f10fe891786a938bb461636563dba properly sets the ProcessColorModel when requested (and when the model is different to that specified in ColorConversionStrategy).

The missing error had already been addressed in an earlier commit.